fav icon page pAlo image

--- a/styles/globals.less
+++ b/styles/globals.less
@@ -1718,7 +1718,7 @@ a {
   height: 75px;
   display: flex;
 
-  box-shadow: 0 1px 7px 1px #4848486b;
+  box-shadow: 0 1px 5px 1px #4848486b;
 }
 
 .header-menu-items {
@@ -1783,6 +1783,7 @@ a {
 
 .desktop-menu {
   display: flex;
+  justify-content: center;
 }
 
 .mobile-menu {
@@ -1923,7 +1924,7 @@ ul {
 
 @media only screen and (max-width: 900px) {
   .pc-version {
-    display: none;
+    // display: none;
   }
 
   .mobile-version {
@@ -1935,7 +1936,7 @@ ul {
   }
 
   .desktop-menu {
-    display: none !important;
+    // display: none !important;
   }
 
   .mobile-menu {
