--- a/styles/globals.less
+++ b/styles/globals.less
@@ -836,6 +836,16 @@ a {
   color: #ffffff;
 }
 
+.newsId{
+  font-size: 22px;
+  font-weight: 600;
+  margin-bottom: 10px;
+}
+
+.newsHeadLine{
+  font-size: 16px;
+}
+
 .siteLogo {
   max-width: 125px;
   max-height: 70px;
@@ -1037,7 +1047,7 @@ a {
 }
 
 .primary-color {
-  color: #f09522 !important;
+  color: #d9363e !important;
 }
 
 .yellow-color {
