--- a/Components/SelectedNews/index.less
+++ b/Components/SelectedNews/index.less
@@ -9,3 +9,20 @@
   font-size: 16px;
   font-weight: 600;
 }
+
+.titleDiv {
+  padding: 12px 0 0 1rem;
+}
+
+.title {
+  margin: auto 0 auto 20px;
+  font-weight: 600;
+  font-size: 16px;
+}
+
+.blueDot {
+  height: 25px;
+  width: 25px;
+  background: #3986f9;
+  border-radius: 50px;
+}
