--- a/styles/globals.less
+++ b/styles/globals.less
@@ -801,10 +801,17 @@ a {
   .pcSec {
     display: none !important;
   }
+
+  .container {
+    margin: 10px 15px !important;
+  }
 }
 
 .container {
   margin: 50px;
+}
+
+@media (max-width: 767px) {
 }
 
 .section-container {
@@ -836,13 +843,13 @@ a {
   color: #ffffff;
 }
 
-.newsId{
+.newsId {
   font-size: 22px;
   font-weight: 600;
   margin-bottom: 10px;
 }
 
-.newsHeadLine{
+.newsHeadLine {
   font-size: 16px;
 }
 
