--- a/pages/index.less
+++ b/pages/index.less
@@ -1,3 +1,20 @@
 .navbarDiv {
   padding-top: 75px;
 }
+
+.advDiv2 {
+  background: #8d88886b;
+  height: 100px;
+  font-size: 20px;
+  font-weight: 500;
+  color: gray;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.advDivOuter {
+  margin: auto;
+  max-width: 1000px;
+}
