--- a/Components/SelectedNews/index.less
+++ b/Components/SelectedNews/index.less
@@ -26,3 +26,16 @@
   background: #3986f9;
   border-radius: 50px;
 }
+
+.newsSelectHeadLine1 {
+  padding: 0 10px;
+  font-size: 22px;
+  font-weight: 600;
+  color: #e19a0d;
+}
+
+.changPosition {
+  position: absolute;
+  bottom: 25px;
+  left: 25px;
+}
