--- a/Components/AdNews/index.less
+++ b/Components/AdNews/index.less
@@ -37,3 +37,32 @@
   justify-content: center;
   align-items: center;
 }
+
+@media (max-width: 767px) {
+  .advCol1 {
+    display: none;
+  }
+
+  .newsAdHeadLine {
+    padding: 10px;
+    font-size: 16px;
+    font-weight: 600;
+  }
+}
+
+@media (max-width: 600px) {
+  .advCol1 {
+    display: none;
+  }
+
+  .newsAdHeadLine {
+    font-size: 14px;
+    font-weight: 500;
+  }
+}
+
+@media (min-width: 1200px) {
+  .colRight {
+    border-left: solid 1px #f0f0f0;
+  }
+}
