--- a/Components/SelectedNews/index.less
+++ b/Components/SelectedNews/index.less
@@ -39,3 +39,32 @@
   bottom: 25px;
   left: 25px;
 }
+
+@media (max-width: 600px) {
+  .newsSelectHeadLine1 {
+    padding: 0 10px;
+    font-size: 16px;
+    font-weight: 600;
+    color: #e19a0d;
+  }
+  .newsSelectHeadLine {
+    font-size: 14px;
+    font-weight: 500;
+  }
+}
+
+.advColMob {
+  display: none;
+}
+
+@media (max-width: 767px) {
+  .advColMob {
+    margin-top: 1rem;
+    display: block;
+  }
+}
+
+.midColSelect{
+  border-right: solid 1px #f0f0f0;
+  // padding-right: 10px;
+}
