--- a/pages/index.less
+++ b/pages/index.less
@@ -16,5 +16,18 @@
 
 .advDivOuter {
   margin: auto;
-  max-width: 1000px;
+  max-width: 75%;
+}
+
+@media (max-width: 767px) {
+  .advDivOuter {
+    max-width: 100%;
+  }
+}
+
+@media (min-width: 1200px) {
+  .colLeft{
+    border-right: solid 1px #f0f0f0;
+    padding-right: 10px;
+  }
 }
